Update figure paths in report and visualization notebook for spectrum bounds and hyperparameter selection. Adjust execution counts in the notebook for consistency.

--- a/experiments/visualization.ipynb
+++ b/experiments/visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 310,
    "id": "67906582",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 311,
    "id": "b004a06f",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 312,
    "id": "5mdrwukb2w5",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 313,
    "id": "22dijhol9tzj",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 314,
    "id": "bzb1uctrkf",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 315,
    "id": "3739706b",
    "metadata": {},
    "outputs": [
@@ -530,14 +530,8 @@
       ">>> MNIST + LR\n",
       "Loaded results for mnist/lr\n",
       "  Self mode: 105 experiments\n",
-      "  Test mode: 105 experiments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved figure to ./results/figures/spectrum_mnist_lr.png\n"
+      "  Test mode: 105 experiments\n",
+      "Saved figure to ./results/figures/spectrum_bounds/spectrum_mnist_lr.png\n"
      ]
     },
     {
@@ -559,7 +553,7 @@
       "Loaded results for mnist/mlp\n",
       "  Self mode: 120 experiments\n",
       "  Test mode: 120 experiments\n",
-      "Saved figure to ./results/figures/spectrum_mnist_mlp.png\n"
+      "Saved figure to ./results/figures/spectrum_bounds/spectrum_mnist_mlp.png\n"
      ]
     },
     {
@@ -585,7 +579,7 @@
       "============================================================\n",
       "\n",
       ">>> MNIST + LR\n",
-      "Saved figure to ./results/figures/hyperparam_mnist_lr.png\n"
+      "Saved figure to ./results/figures/hyperparam_selection/hyperparam_mnist_lr.png\n"
      ]
     },
     {
@@ -604,7 +598,7 @@
      "text": [
       "\n",
       ">>> MNIST + MLP\n",
-      "Saved figure to ./results/figures/hyperparam_mnist_mlp.png\n"
+      "Saved figure to ./results/figures/hyperparam_selection/hyperparam_mnist_mlp.png\n"
      ]
     },
     {
@@ -623,7 +617,7 @@
      "text": [
       "\n",
       ">>> CIFAR2 + RESNET9\n",
-      "Saved figure to ./results/figures/hyperparam_cifar2_resnet9.png\n"
+      "Saved figure to ./results/figures/hyperparam_selection/hyperparam_cifar2_resnet9.png\n"
      ]
     },
     {
@@ -667,6 +661,8 @@
     "\n",
     "figures_dir = \"./results/figures\"\n",
     "os.makedirs(figures_dir, exist_ok=True)\n",
+    "os.makedirs(f\"{figures_dir}/spectrum_bounds\", exist_ok=True)\n",
+    "os.makedirs(f\"{figures_dir}/hyperparam_selection\", exist_ok=True)\n",
     "\n",
     "# =============================================================================\n",
     "# Spectrum Bounds Figures (combined self + test per setting)\n",
@@ -683,7 +679,7 @@
     "\n",
     "for dataset, model in spectrum_configs:\n",
     "    print(f\"\\n>>> {dataset.upper()} + {model.upper()}\")\n",
-    "    save_path = f\"{figures_dir}/spectrum_{dataset}_{model}.png\"\n",
+    "    save_path = f\"{figures_dir}/spectrum_bounds/spectrum_{dataset}_{model}.png\"\n",
     "    plot_spectrum_comparison(dataset, model, save_path=save_path)\n",
     "\n",
     "# =============================================================================\n",
@@ -707,7 +703,7 @@
     "    if os.path.exists(path):\n",
     "        print(f\"\\n>>> {dataset.upper()} + {model.upper()}\")\n",
     "        res = torch.load(path, map_location=\"cpu\", weights_only=False)\n",
-    "        save_path = f\"{figures_dir}/hyperparam_{dataset}_{model}.png\"\n",
+    "        save_path = f\"{figures_dir}/hyperparam_selection/hyperparam_{dataset}_{model}.png\"\n",
     "        constants = plot_comparison_results(res, save_path=save_path)\n",
     "        if constants and constants.get(\"c_95\"):\n",
     "            all_constants.append({\n",
@@ -748,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 316,
    "id": "yjfgn159mcq",
    "metadata": {},
    "outputs": [
@@ -791,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 317,
    "id": "dyje6opg2bq",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 318,
    "id": "cp08tbsv16d",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 319,
    "id": "z6pk77ggfse",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 320,
    "id": "ct6yxiorprf",
    "metadata": {},
    "outputs": [
@@ -1277,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 321,
    "id": "okgarxn90l",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 322,
    "id": "0n5aaae1sk9",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 323,
    "id": "wzkpvgtxpm",
    "metadata": {},
    "outputs": [
@@ -1372,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 324,
    "id": "tw2qebavibs",
    "metadata": {},
    "outputs": [
@@ -1489,125 +1485,6 @@
     "\n",
     "    print(f\"\\nAll figures saved to {fu_figures_dir}/\")\n",
     "    plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "mz0m3zagtg",
-   "metadata": {},
-   "source": [
-    "### Compare Multiple Experiments (Optional)\n",
-    "\n",
-    "Load and compare results across different datasets/models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 309,
-   "id": "gq17uk38egf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_fu_multiple_results(configs, results_dir=\"./results/faithfulness_utility\"):\n",
-    "    \"\"\"\n",
-    "    Load faithfulness-utility results from multiple experiments.\n",
-    "\n",
-    "    Args:\n",
-    "        configs: List of (dataset, model, proj_type) tuples\n",
-    "        results_dir: Directory containing results\n",
-    "\n",
-    "    Returns:\n",
-    "        Dictionary mapping (dataset, model) -> results\n",
-    "    \"\"\"\n",
-    "    all_results = {}\n",
-    "    for dataset, model, proj_type in configs:\n",
-    "        filename = f\"{dataset}_{model}_{proj_type}.pt\"\n",
-    "        filepath = os.path.join(results_dir, filename)\n",
-    "        if os.path.exists(filepath):\n",
-    "            all_results[(dataset, model)] = torch.load(filepath, map_location=\"cpu\", weights_only=False)\n",
-    "            print(f\"Loaded: {filename}\")\n",
-    "        else:\n",
-    "            print(f\"Not found: {filename}\")\n",
-    "    return all_results\n",
-    "\n",
-    "\n",
-    "def plot_fu_comparison_monotonicity(all_results, figsize=(12, 6), save_path=None):\n",
-    "    \"\"\"Compare LDS*(m) vs m across different experiments.\"\"\"\n",
-    "    fig, ax = plt.subplots(figsize=figsize)\n",
-    "\n",
-    "    colors = plt.cm.tab10(np.linspace(0, 1, len(all_results)))\n",
-    "\n",
-    "    for i, ((dataset, model), results) in enumerate(all_results.items()):\n",
-    "        m_values = results['m_values']\n",
-    "        per_m = results['per_m_results']\n",
-    "        lds_stars = [per_m[m]['lds_star'] for m in m_values]\n",
-    "\n",
-    "        ax.plot(m_values, lds_stars, 'o-', color=colors[i],\n",
-    "                markersize=8, linewidth=2, label=f\"{dataset}/{model}\")\n",
-    "\n",
-    "    ax.set_xscale('log')\n",
-    "    ax.set_xlabel('Projection Dimension m')\n",
-    "    ax.set_ylabel('LDS*(m)')\n",
-    "    ax.set_title('Comparison: LDS*(m) vs m Across Experiments')\n",
-    "    ax.legend()\n",
-    "    ax.grid(True, alpha=0.3)\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "\n",
-    "    if save_path:\n",
-    "        plt.savefig(save_path, dpi=150, bbox_inches='tight')\n",
-    "        print(f\"Saved figure to {save_path}\")\n",
-    "\n",
-    "    plt.show()\n",
-    "    return fig, ax\n",
-    "\n",
-    "\n",
-    "def plot_fu_comparison_alignment(all_results, figsize=(12, 6), save_path=None):\n",
-    "    \"\"\"Compare alignment (fraction empirically unfaithful) across experiments.\"\"\"\n",
-    "    fig, ax = plt.subplots(figsize=figsize)\n",
-    "\n",
-    "    labels = []\n",
-    "    fractions = []\n",
-    "\n",
-    "    for (dataset, model), results in all_results.items():\n",
-    "        analysis = results.get('analysis', {})\n",
-    "        align = analysis.get('alignment', {})\n",
-    "        fraction = align.get('fraction_unfaithful', 0)\n",
-    "        labels.append(f\"{dataset}\\n{model}\")\n",
-    "        fractions.append(fraction * 100)\n",
-    "\n",
-    "    colors = ['red' if f > 50 else 'green' for f in fractions]\n",
-    "    ax.bar(range(len(labels)), fractions, color=colors, alpha=0.7, edgecolor='black')\n",
-    "\n",
-    "    ax.axhline(y=50, color='black', linestyle='--', linewidth=2, alpha=0.5)\n",
-    "    ax.set_xticks(range(len(labels)))\n",
-    "    ax.set_xticklabels(labels)\n",
-    "    ax.set_ylabel('% of λ*(m) Empirically Unfaithful')\n",
-    "    ax.set_title('Alignment Comparison Across Experiments')\n",
-    "    ax.set_ylim([0, 100])\n",
-    "    ax.grid(True, alpha=0.3, axis='y')\n",
-    "\n",
-    "    plt.tight_layout()\n",
-    "\n",
-    "    if save_path:\n",
-    "        plt.savefig(save_path, dpi=150, bbox_inches='tight')\n",
-    "        print(f\"Saved figure to {save_path}\")\n",
-    "\n",
-    "    plt.show()\n",
-    "    return fig, ax\n",
-    "\n",
-    "\n",
-    "# Example usage:\n",
-    "# fu_configs = [\n",
-    "#     (\"mnist\", \"lr\", \"normal\"),\n",
-    "#     (\"mnist\", \"mlp\", \"normal\"),\n",
-    "#     (\"cifar2\", \"resnet9\", \"normal\"),\n",
-    "# ]\n",
-    "# all_fu_results = load_fu_multiple_results(fu_configs)\n",
-    "#\n",
-    "# if all_fu_results:\n",
-    "#     plot_fu_comparison_monotonicity(all_fu_results)\n",
-    "#     plot_fu_comparison_alignment(all_fu_results)"
    ]
   }
  ],
